# agda-hott

./: .gitignore  Agdit.hs  Category.agda  Cleagda.hs  Creagda.hs  Level.agda  README.md  Refagda.hs  Root.hs  agda-hott-dev.cabal  agda-hott.agda-lib  creagda.py
Algebra/: Core.agda
Category/: Base.agda  FunCat.agda  FunCat2.agda  Functor.agda  Natural.agda
Category/Natural/: Instance.agda
Data/: ASC.agda  OFF.agda
Data/ASC/: Base.agda  Properties.agda
Data/Bool/: Base.agda  Core.agda  Properties.agda
Data/Empty/: Base.agda
Data/Fin/: Base.agda  Properties.agda
Data/Fin/Subset/: Base.agda  Properties.agda
Data/Nat/: Base.agda  Core.agda  Properties.agda
Data/Product/: Base.agda  Core.agda  Properties.agda
Data/Sum/: Base.agda  Properties.agda
Data/Unit/: Core.agda
Data/Vec/: Base.agda  Properties.agda
HoTT/: EqNotation.agda  OFF.agda  Presheaf.agda
HoTT/OFF/: Properties.agda
HoTT/Presheaf/: Cycle.agda  Morphism.agda  Under.agda
HoTT/Setoid/: Morphism.agda
Relation/: Core.agda  Reasoning.agda
Relation/Equality/: Base.agda  Core.agda  Reasoning.agda
Relation/Reasoning/: Set.agda  Setoid.agda
Universe/: Set.agda  Setoid.agda  Type.agda
Universe/Presheaf/: Base.agda  Categorical.agda  Cycle.agda  Fillable.agda  Op.agda  SC.agda
Universe/Presheaf/SC/: Fill.agda  Op.agda
Universe/Set/: Categorical.agda
Universe/Setoid/: Base.agda  Categorical.agda
