name:           agda-hott-dev
version:        1.0.0.1
build-type:     Simple
description:    Developer tools
tested-with:    GHC == 9.2.5

executable Creagda
    hs-source-dirs:     .
    other-modules:      Root
    main-is:            Creagda.hs
    default-language:   Haskell2010
    build-depends:      base      >= 4.9.0.0 && < 4.18
                      , directory >= 1.0.0.0 && < 1.4
                      , filepath  >= 1.4.1.0 && < 1.5

executable Refagda
    hs-source-dirs:     .
    other-modules:      Root
    main-is:            Refagda.hs
    default-language:   Haskell2010
    build-depends:      base      >= 4.9.0.0 && < 4.18
                      , directory >= 1.0.0.0 && < 1.4
                      , filepath  >= 1.4.1.0 && < 1.5

executable Agdit
    hs-source-dirs:     .
    other-modules:      Root
    main-is:            Agdit.hs
    default-language:   Haskell2010
    build-depends:      base      >= 4.9.0.0 && < 4.18
                      , directory >= 1.0.0.0 && < 1.4
                      , filepath  >= 1.4.1.0 && < 1.5
                      , process   >= 1.2.0.0 && < 1.7